--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             <h2>My Work</h2>
         </div>
     </div>
+
     <div class="m-5">
         <img src="images\smallstroke.png" style="position: absolute; z-index: -1;" />
     </div>
@@ -157,25 +158,31 @@
             <img src="images/cover_internship.png" class="img-fluid mb-3">
             <h3><strong>Internship - CEM</strong></h3>
             <p class="font-weight-light">
-                The Purdue University Construction Engineering Management department needed a new interface to 
+                The Purdue University Construction Engineering Management department needed a new interface to
                 manage student data regarding their internships that were completed through the program…
             </p>
             <p class="font-italic">
                 Javascript, HTML, C#, SQL, Bootstrap
             </p>
+            <button class="btn btn-light font-italic" type="button" data-toggle="modal" data-target="#internshipModal">
+                click to view
+            </button>
         </div>
 
         <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
             <img src="images/cover_calaveras.png" class="img-fluid mb-3">
             <h3><strong>Calaveras Big Trees</strong></h3>
             <p class="font-weight-light">
-                To enhance and display newly developed CSS and Javascript styling capabilities, my group and I 
-                created a mobile friendly and interactive website displaying information about the Calaveras Big 
+                To enhance and display newly developed CSS and Javascript styling capabilities, my group and I
+                created a mobile friendly and interactive website displaying information about the Calaveras Big
                 Trees State Park in Northern California...
             </p>
             <p class="font-italic">
                 Javascript, jQuery, HTML, CSS
             </p>
+            <button class="btn btn-light font-italic" type="button" data-toggle="modal" data-target="#treesModal">
+                click to view
+            </button>
         </div>
 
         <!--<div class="col-0 col-md-1"></div>-->
@@ -183,78 +190,111 @@
             <img src="images/cover_train.png" class="img-fluid mb-3" />
             <h3><strong>Purdue Reamer Club</strong></h3>
             <p class="font-weight-light">
-                The Purdue Reamer Club is a student run organization that was in need of a new website that could 
+                The Purdue Reamer Club is a student run organization that was in need of a new website that could
                 allow users to view upcoming events...
             </p>
             <p class="font-italic">
                 HTML, CSS, Javascript
             </p>
-
+            <button class="btn btn-light font-italic" type="button" data-toggle="modal" data-target="#trainModal">
+                click to view
+            </button>
         </div>
     </div>
 
-            <div class="m-5">
-                <img src="images\smallstroke.png" style="position: absolute; z-index: -1;" />
-            </div>
-            <div class="row" id="graphicDesign">
-                <div class="col-1"></div>
-                <h3><strong>Graphic Design</strong></h3>
-            </div>
+    <div class="m-5">
+        <img src="images\smallstroke.png" style="position: absolute; z-index: -1;" />
+    </div>
+    <div class="row" id="graphicDesign">
+        <div class="col-1"></div>
+        <h3><strong>Graphic Design</strong></h3>
+    </div>
 
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-                    <img src="images/cover_corec.JPG" class="img-fluid mb-3">
-                    <h3><strong>Purdue University CoRec</strong></h3>
-                    <p class="font-weight-light">
-                        Since Fall of 2019, I have worked on various graphic design projects to be displayed in the 
-                        Purdue University Recreational center. These graphics have been viewed by thousands of students 
-                        on Digital screens and on the rec center’s social media presence.
-                    </p>
-                    <p class="font-italic">
-                        Adobe Spark, Illustrator, Photoshop
-                    </p>
-                </div>
-                <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-                    <img src="images/cover_logo.png" class="img-fluid mb-3">
-                    <h3><strong>Infographics and Logos</strong></h3>
-                    <p class="font-weight-light">
-                        Through my time at Purdue, I have had the opportunity to create infographics for my classes and Logos for 
-                        my group projects...
-                    </p>
-                    <p class="font-italic">
-                        Adobe Illustrator, Photoshop
-                    </p>
-                </div>
-                <!--<div class="col-md-1"></div>-->
-                <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
-                    <img src="images/cover_digital.JPG" class="img-fluid mb-3" />
-                    <h3><strong>Digital Illustration</strong></h3>
-                    <p class="font-weight-light">
-                        Digital Illustration comes as a small hobby of mine. Feel free to browse some sketches I have done while 
-                        feeling inspired.
-                    </p>
-                    <p class="font-italic">
-                        Adobe Fresco, Illustrator, Photoshop
-                    </p>
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+            <img src="images/cover_corec.jpg" class="img-fluid mb-3">
+            <h3><strong>Purdue University CoRec</strong></h3>
+            <p class="font-weight-light">
+                Since Fall of 2019, I have worked on various graphic design projects to be displayed in the
+                Purdue University Recreational center. These graphics have been viewed by thousands of students
+                on Digital screens and on the rec center’s social media presence.
+            </p>
+            <p class="font-italic">
+                Adobe Spark, Illustrator, Photoshop
+            </p>
+            <button class="btn btn-light font-italic" type="button" data-toggle="modal" data-target="#corecModal">
+                click to view
+            </button>
+        </div>
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+            <img src="images/cover_logo.png" class="img-fluid mb-3">
+            <h3><strong>Infographics and Logos</strong></h3>
+            <p class="font-weight-light">
+                Through my time at Purdue, I have had the opportunity to create infographics for my classes and Logos for
+                my group projects...
+            </p>
+            <p class="font-italic">
+                Adobe Illustrator, Photoshop
+            </p>
+            <button class="btn btn-light font-italic" type="button" data-toggle="modal" data-target="#logoModal">
+                click to view
+            </button>
+        </div>
+        <!--<div class="col-md-1"></div>-->
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+            <img src="images/cover_digital.jpg" class="img-fluid mb-3" />
+            <h3><strong>Digital Illustration</strong></h3>
+            <p class="font-weight-light">
+                Digital Illustration comes as a small hobby of mine. Feel free to browse some sketches I have done while
+                feeling inspired.
+            </p>
+            <p class="font-italic">
+                Adobe Fresco, Illustrator, Photoshop
+            </p>
+            <button class="btn btn-light font-italic" type="button" data-toggle="modal" data-target="#digitalModal">
+                click to view
+            </button>
+        </div>
+    </div>
+    <div class="ml-4">
+        <img src="images\paintstroke.png" style="position: absolute; width:auto" />
+    </div>
+    <div class="row mt-5" id="contact">
+        <div class="col-1"></div>
+        <div class="col-6">
+            <h2>Contact</h2>
+        </div>
+    </div>
+    <div>
+        <form>
+        </form>
+    </div>
 
+    <!-- MODALS -->
 
-            <div class="ml-4">
-                <img src="images\paintstroke.png" style="position: absolute; width:auto" />
-            </div>
-            <div class="row mt-5" id="contact">
-                <div class="col-1"></div>
-                <div class="col-6">
-                    <h2>Contact</h2>
+   
+
+    <!-- Modal -->
+    <div class="modal fade" id="internshipModal" tabindex="-1" role="dialog" aria-labelledby="CEMInternship" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="CEMinternship">Internship - CEM</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Hello
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <!--<button type="button" class="btn btn-primary">Save changes</button>-->
                 </div>
             </div>
-            <div>
-                <form>
-
-                </form>
-            </div>
+        </div>
+    </div>
 
 </body>
 
