Spacing and Image updates
Just testing out some locations of images and text!

--- a/index.html
+++ b/index.html
@@ -71,11 +71,21 @@
             </ul>
         </div>
     </nav>
-    <div class="row mt-5 pt-5">
-        <div class="col-lg-5 mr-5" style="">
-            <img src="images\seattle.JPG" class=""/>
-        </div>
-        <div class="col-lg-6 col-md-8 col-sm-10 mt-5">
+    <!--<div class="col-lg-5" style="">
+        <img src="images\seattleimg.jpg" class="" />
+    </div>-->
+
+    <!--<div class="col-lg-5" style=" position:absolute;">
+        <img src="images\seattleimg.jpg" class="img-fluid" />
+    </div>-->
+
+    <div class="col-lg-5" style="z-index: -1; position:absolute;">
+        <img src="images\seattlepaint.jpg" class="" />
+    </div>
+
+
+    <div class="row ml-lg-5 ">
+        <div class="col-lg-6 col-md-8 col-sm-10 mt-5" style="z-index: 1">
             <div class="container-fluid m-0 bg">
                 <div class="row mt-5 pt-5">
                     <div class="col-3"></div>
@@ -269,7 +279,7 @@
     <div class="card col-lg-8 col-md-10 col-sm-11 p-5 m-5">
         <h3><strong>Interested in working with me?</strong></h3>
         <p class="font-italic">Let's chat...</p>
-        <form action="https://formspree.io/xwkrgqno"  method="POST">
+        <form action="https://formspree.io/xwkrgqno" method="POST">
             <div class="row">
                 <div class="col-6 mb-4">
                     <input type="text" class="form-control" id="firstNameInput" name="firstNameInput" placeholder="FirstName " required>
@@ -295,9 +305,6 @@
     </div>
 
     <!-- MODALS -->
-
-   
-
     <!-- Modal -->
     <div class="modal fade" id="internshipModal" tabindex="-1" role="dialog" aria-labelledby="CEMInternship" aria-hidden="true">
         <div class="modal-dialog" role="document">
