--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>-->
 
     <div class="col-lg-5" style="z-index: -1; position:absolute;">
-        <img src="images\seattlepaint.jpg" class="" />
+        <img src="images\Seattlepaint.jpg" class="" />
     </div>
 
 
