More modal content
What can I say? I have a lot of content for my portfolio!

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content p-5">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-lg-6 col-sm-12">
                         <h3><strong>Purdue University CoRec</strong></h3>
                         <p class="font-weight-light">
                             Since Fall of 2019, I have worked on various graphic design projects to be displayed in the Purdue University Recreational
@@ -443,6 +443,37 @@
                         <p class="font-italic">
                             Adobe Spark, Illustrator, Photoshop
                         </p>
+                    </div>
+                    <div class="col-lg-6 col-sm-12">
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="images\crecStory1.jpg" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="images\crecStory2.jpg" class="img-fluid m-2 shadow" />
+                        </div>
+                        <div class="col-6">
+                            <img src="images\crecStory3.jpg" class="img-fluid m-2 shadow" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="images\crecStory4.jpg" class="img-fluid m-2 shadow" />
+                        </div>
+                        <div class="col-6">
+                             <img src="images\crecStory5.jpg" class="img-fluid m-2 shadow" />
+                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="images\crecStory6.jpg" class="img-fluid m-2 shadow" />
+                        </div>
+                        <div class="col-6">
+                            <img src="images\crecStory7.jpg" class="img-fluid m-2 shadow" />
+                        </div>
                     </div>
                 </div>
             </div>
@@ -510,7 +541,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content p-5">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-6">
                         <h3><strong>Digital Illustration</strong></h3>
                         <p class="font-weight-light">
                             Digital Illustration comes as a small hobby of mine. Feel free to browse some sketches I have done while feeling inspired.
@@ -518,6 +549,29 @@
                         <p class="font-italic">
                             Adobe Fresco, Illustrator, Photoshop
                         </p>
+                        <div class="row">
+                            <div class="col-4 mt-5">
+                                <img src="images\gd1.jpg" class="img-fluid m-2 shadow" />
+                            </div>
+                            <div class="col-4 mt-5">
+                                <img src="images\gd2.jpg" class="img-fluid m-2 shadow" />
+                            </div>
+                            <div class="col-4 mt-5">
+                                <img src="images\gd5.jpg" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="images\pinksquare.png" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <img src="images\hall1.jpg" class="img-fluid m-2 shadow" />
                     </div>
                 </div>
             </div>
