--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
     <div class="row">
         <div class="col-lg-6" style="z-index: 1; position: absolute">
-            <img src="images\seattleimg.jpg" class="img-fluid"/>
+            <img src="images\Seattleimg.jpg" class="img-fluid"/>
         </div>
         <div class="col-lg-5 m-0" style="z-index: -1; position: absolute; left: 40%;">
             <img src="images\Seattlepaint.jpg" class=""/>
@@ -320,7 +320,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content p-5">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-lg-5 col-sm-12">
                         <h3><strong>Internship - CEM</strong></h3>
                         <p class="font-weight-light">
                             The Purdue University Construction Engineering Management department needed a new interface to manage student data regarding
@@ -340,6 +340,33 @@
                         <p class="font-italic">
                             Javascript, HTML, C#, SQL, Bootstrap
                         </p>
+                    </div>
+                    <div class="col-lg-7 col-sm-12">
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="images\internship1.png" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="images\internship2.png" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="images\internship3.png" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="images\internship4.png" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <img src="images\internship5.png" class="img-fluid m-2 shadow" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
