Little touch ups
Just making some little adjustments

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 <body>
 
 
-    <div class="mb-lg-5" id="home"></div>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light shadow" >
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light shadow">
         <!-- this is the icon that appears when the nav is small -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -72,40 +71,44 @@
 
         </div>
     </nav>
-   
-             
 
     <div class="row">
+        <div class="mb-5" id="home"></div>
+    </div>
+    
 
-        <div class="col-lg-6" style="z-index: 1; position: absolute">
-            <img src="images\Seattleimg.jpg" class="img-fluid shadow" />
-        </div>
-        <div class="col-lg-5" style="z-index: -1; position: absolute; left: 40%;">
-            <img src="images\Seattlepaint.jpg" class="" />
-        </div>
 
-        <div class="col-lg-5"></div>
-        <div class="col-lg-6 col-md-8 col-sm-10 mt-5" style="z-index: 1; ">
-            <div class="container-fluid m-0 bg">
-                <div class="row mt-5 pt-5">
-                    <div class="col-3"></div>
+    <div class="row mt-5">
+        <div class="col-lg-4 col-sm-12 mt-lg-5 mt-sm-2 ml-5">
+            <img src="images\Seattleimg.jpg" class="img-fluid shadow" style="z-index: 1; " />
+        </div>
+        <div class="col-lg-1 col-sm-2"></div>
+        <div class="col-lg-6 col-md-8 col-sm-11 mt-5 ml-lg-1 ml-sm-5">
+            <div class="col-12">
+                <img src="images\Seattlepaint.jpg" class="" style="z-index: -2; position: absolute" />
+
+
+                <div class="row pt-5">
+
+                    <div class="col-2"></div>
                     <div class="col-6">
                         <h1 class="text" style="transform: scale(1.5)">.allieKnepp {</h1>
                     </div>
                 </div>
                 <div class="row m-5">
-                    <div class="col-3"></div>
-                    <div class="col-9">
+                    <div class="col-lg-2 col-sm-1"></div>
+                    <div class="col-lg-10 col-sm-12">
                         <h2 class="text" style="transform: scale(1.1)">Web: Development, Design;</h2>
                     </div>
                 </div>
                 <div class="row pb-5 mb-lg-5">
-                    <div class="col-3"></div>
+                    <div class="col-2"></div>
                     <div class="col-6">
                         <h1 class="text" style="transform: scale(1.5)">}</h1>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
@@ -113,12 +116,12 @@
     <!--this is the about section-->
 
     <div class="mb-lg-5 p-5" id="about"></div>
-    <div class="m-3">
+    <div class="ml-lg-3 ml-sm-1">
         <img src="images\paintstroke.png" style="position: absolute;" />
     </div>
 
     <!-- The about section -->
-    <div class="row mt-5">
+    <div class="row mt-lg-5 mt-sm-1">
         <div class="col-1 mt-5"></div>
         <div class="col-6 mt-5">
             <h2>About</h2>
@@ -149,7 +152,7 @@
     </div>
 
     <!-- The projects/ work section -->
-    <div class="ml-3">
+    <div class="ml-lg-3 ml-sm-1 pt-1">
         <img src="images\paintstroke.png" style="position: absolute;" />
     </div>
     <div class="row mt-5">
@@ -275,7 +278,7 @@
 
     <!-- Contact section -->
 
-    <div class="ml-4">
+    <div class="ml-lg-3 ml-sm-1">
         <img src="images\paintstroke.png" style="position: absolute; width:auto" />
     </div>
     <div class="row mt-5" id="contact">
